# tensorflow-example

linear/: keras_softmax_pooling.ipynb
simple/: CMakeLists.txt  load.cc  model.h5  train.ipynb  train.py
